--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,12 +5,12 @@
   --foreground: #171717;
 }
 
-@theme inline {
+/* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -31,4 +31,15 @@ body {
 .no-scrollbar {
   -ms-overflow-style: none;
   scrollbar-width: none;
+}
+
+/* Custom styles */
+body {
+  font-family: var(--font-poppins);
+  color: theme('colors.gray.900');
+}
+
+code {
+  font-family: var(--font-jetbrains-mono);
+  font-size: 0.875rem; /* 14px */
 }
